2007-04-24  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: set to version 3.0.1

Released 3.0.0

2007-04-23  Vivien Malerba <malerba@gnome-db.org>

	* libsql/mem.c:
	* libsql/sql_tree.c:
	* libsql/sql_parser.c: corrected non initialized memory bugs
	* libgda/gda-server-provider-extra.c: look for files in the correct install dir

2007-04-19  Vivien Malerba <malerba@gnome-db.org>

	* tests/providers/prov-test-common.c:
	* tests/providers/check_sqlite.c: don't fork tests when using SQLite as
	SQLite does not support it (see http://www.sqlite.org/faq.html)
	* providers/sqlite/gda-sqlite-provider.c: added a busy handler to wait for
	a few ms when a database is locked
	* providers/sqlite/gda-sqlite-recordset.c: set the data model as read-only
	* libgda/gda-data-model-row.c: removed unnecessary assertion check

2007-04-18  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: set version to 3.0.0 for release
	* libgda/sql-delimiter/parser.y:
	* libgda/sql-delimiter/lexer.l:
	* libgda/sql-delimiter/gda-sql-delimiter.h:
	* libgda/sql-delimiter/gda-sql-delimiter.c:
	* libgda/sql-delimiter/gda-test-delimiter.c: the delimiter now works correctly when using
	BEGIN ... END blocks with ";" in the middle, when using PostgreSQL dollar quoting notation
	for strings and removes comments
	* libgda/sql-delimiter/lexer.l:
	* libsql/lexer.l: don't replace "\n", "\t", etc by their char '\n', '\t', etc in strings
	or textuals
	* tests/queries/check_delimiter.c:
	* tests/queries/basic_sql.xml:
	* tests/queries/all_sql_tests.xml:
	* tests/queries/app_sql.xml: improved test error reporting, and added a lot of complex
	SQL test cases
	* providers/sqlite/gda-sqlite-provider.c: implemented the get_last_insert_id() virtual
	method
	* libgda/gda-connection.c:
	* libgda/gda-server-provider.c: doc. update for the get_last_insert_id() functions
	* providers/postgres/gda-postgres-provider.[ch]: corrected a bug in 