@@ -1,5 +1,10 @@
 2007-04-24  Vivien Malerba <malerba@gnome-db.org>
 
+	* tools/Makefile.am: applied a patch by Leonardo Boshell to fix
+	  bug #432798
+
+2007-04-24  Vivien Malerba <malerba@gnome-db.org>
+
 	* configure.in: set to version 3.0.1
 
 Released 3.0.0
